# agentic-game-dev

./: .env.example  .gitignore  README.md  agent_game_maker.py  pyproject.toml  requirements.txt
agentic_game_dev/: __init__.py  activity.py  cli.py  environment.py  journal.py  models.py  orchestrator.py  provider.py  validation.py  workspace.py
agentic_game_dev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
generated_game/: audio.py  config.py  enemy.py  game_plan.json  game_state.py  main.py  player.py  render.py  territory.py
generated_game_v2/: main.py  requirements.txt
generated_game_v2/.agentic/: environment.json  run.json
generated_game_v2/.agentic/artifacts/files/: main.py.json
generated_game_v2/.agentic/artifacts/planning/: architecture.txt  designer.txt  plan.json
generated_game_v3/: game_plan.json  main.py  requirements.txt  settings.py
generated_game_v3/.agentic/: environment.json  run.json
generated_game_v3/core/: clock.py  game_context.py  input.py  state_machine.py
generated_game_v3/gamelib/: board.py  enemies.py  grid_geometry.py  player.py  polygon_fill.py  scoring.py  sparx.py
generated_game_v3/persistence/: highscores.py
generated_game_v3/render/: gl_context.py  line_batch.py  polygon_mesh.py  renderer.py  shaders.py  text_renderer.py
generated_game_v3/states/: base.py  game_over_state.py  menu_state.py  paused_state.py  playing_state.py
tests/: test_activity.py  test_cli.py  test_environment.py  test_journal.py  test_orchestrator.py  test_provider.py  test_validation.py  test_workspace.py
(+31 files in other folders)
