[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-game-dev"
version = "2.4.0"
description = "A resumable agent team for generating isolated Pygame games"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40,<1",
    "python-dotenv>=1.0,<2",
    "ollama>=0.6,<1",
]

[project.scripts]
agent-game-dev = "agentic_game_dev.cli:main"

[project.optional-dependencies]
dev = ["ruff>=0.11", "mypy>=1.15"]

[tool.setuptools.packages.find]
include = ["agentic_game_dev*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
